# translator_404_bot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  bot.py  docker-compose.yml  dot_env  pyproject.toml  requirements.txt  utils.py
ext/: excluded_senders.py  language_detection.py  local_translated.py  local_translator.py  sessions.py
scripts/: docker_build.sh  docker_run.sh
storage/: README.md
