[tool.poetry]
name = "translator-404-bot"
version = "0.1.0"
description = ""
authors = ["lexxai <lexxai@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
telethon = "^1.39.0"
googletrans = "^4.0.2"
langdetect = "^1.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
